# hello_imgui_template

./: .gitignore  CMakeLists.txt  Readme.md  Readme_template.md  build_appimage.sh  build_appimage_docker.sh  hello_world.desktop  hello_world.main.cpp
.github/workflows/: ci_multiplatform_build.yml
assets/app_settings/emscripten/: shell.emscripten.html
